# STP

./: .clang-tidy  .gitignore  CMakeLists.txt
.github/: cmake.yml
cmake/: CompileOptions.cmake
include/lib/: CMakeLists.txt  SumFloat.hpp
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  SumFloat.cpp
src/project/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  SumFloat.test.cpp
